# balanceai

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGNS.md  DEVELOPMENT.md  IDEAS.md  README.md  STATUS.md  app.json  index.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
integ_tests/balanceai_backend/: test_analyze_financial_question.py
src/balanceai/: config.py  constants.py  server.py
src/balanceai/dagger/: aws.py
src/balanceai/helpers/: journal_entry.py  journal_entry_helper.py  plaid_helper.py
src/balanceai/journals/: finder.py  merchant_cache.py  storage.py
src/balanceai/models/: __init__.py  account.py  bank.py  journal.py  ledger.py  transaction.py
src/balanceai/parsers/: __init__.py  chase.py
src/balanceai/prompts/: categorizer.py  extract_journal_entry_prompt.py  parser.py
src/balanceai/servers/: bookkeeping_server.py  link_bank_server.py
src/balanceai/services/: anthropic.py  gcp_vertexai.py  openai.py  openai_service.py  plaid.py  tavily.py
src/balanceai/statements/: storage.py
src/balanceai/utils/: journal_entry_util.py  ocr_util.py  plaid_util.py
src/balanceai_backend/: __init__.py  config.py  constants.py  db.py
src/balanceai_backend/helpers/: journal_entry_helper.py  plaid_helper.py
src/balanceai_backend/journals/: finder.py  journal_db.py  storage.py
src/balanceai_backend/models/: __init__.py  account.py  category.py  journal.py  ledger.py  report.py
src/balanceai_backend/parsers/: __init__.py  chase.py
src/balanceai_backend/prompts/: categorizer.py  (+4 more)
tests/balanceai_backend/: test_db.py
(+30 files in other folders)
