[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balanceai"
version = "0.1.0"
description = "Automated accounting tool for receipt handling and bookkeeping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdevcommons>=0.1.4",
    "boto3",
    "google-cloud-aiplatform",
    "anthropic",
    "openai",
    "mcp",
    "pdfplumber",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.19.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[[tool.mypy.overrides]]
module = "appdevcommons.*"
ignore_missing_imports = true
